syntax="proto3";
import "proto/laptop_message.proto";
import"proto/filter_message.proto";
package proto;
option go_package="/pb";


message CreateLaptopRequest{
    Laptop laptop=1;
}
message CreateLaptopResponse{
    string id=1;
}
message SearchLaptopRequest{
    Filter filter=1;
}
message SearchLaptopResponse{
    Laptop laptop=1;
} 
message imageinfo{
    string laptop_id=1;
    string image_type=2;
}
  message UploadImageRequest{    
     oneof data{
         imageinfo info=1;
        bytes chunkdata=2;
   
    };
}
message ImageResponse{
    string id=1;
     uint32 size=2;
}
message RateLaptopRequest{
    string laptop_id=1;
    double score=2;
}
message RateLaptopResponse{
    string laptop_id=1;
    uint32 rate_count=2;
    double score=3;
}
service LaptopService{
    rpc CreateLaptop(CreateLaptopRequest)returns(CreateLaptopResponse){};
    rpc SearchLaptop(SearchLaptopRequest)returns(stream SearchLaptopResponse){};
    rpc UploadImage(stream UploadImageRequest)returns (ImageResponse){};
    rpc RateLaptop(stream RateLaptopRequest)returns (stream RateLaptopResponse){}
}